--- a/index.html
+++ b/index.html
@@ -11,23 +11,28 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+  />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="top-line">
-          <a class="logo" href="./index.html"
+    <header class="header">
+      <div class="container">
+      <div class="menu-nav">
+      <nav class="menu-nav">
+        <a class="logo" href="./index.html"
             ><span class="web">Web</span>Studio</a
           >
-          <ul class="list">
+          
+          <ul class="list navigation">
             <li><a class="nav-links" href="./index.html">Studio</a></li>
             <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-links" href="#">Contacts</a></li>
-          </ul>
-          </nav>
-          <address>
-            <ul class="list">
+                </ul>
+      </nav>
+           <ul class="list navigation contacts">
               <li>
                 <a class="nav-links-contacts" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
@@ -38,52 +43,51 @@
                   >+11(000)111-11-11</a
                 >
               </li>
-            </ul>
-          </address>
+              </ul>
         </div>
-      </header>
+        </header>
 
     <main>
-      <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section class="strategy">
-        <ul class="list">
-          <li>
-            <h3 class="future-title">Strategy</h3>
-            <p class="future-text">
+      <section class="strategy container">
+        <ul class="list future-flex">
+          <li class="feature">
+            <h3 class="feature-title">Strategy</h3>
+            <p class="feature-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3 class="future-title">Punctuality</h3>
-            <p class="future-text">
+          <li class="feature">
+            <h3 class="feature-title">Punctuality</h3>
+            <p class="feature-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3 class="future-title">Diligence</h3>
-            <p class="future-text">
+          <li class="feature">
+            <h3 class="feature-title">Diligence</h3>
+            <p class="feature-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3 class="future-title">Technologies</h3>
-            <p class="future-text">
+          <li class="feature">
+            <h3 class="feature-title">Technologies</h3>
+            <p class="feature-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section class="about">
+      <section class="about container">
         <h2 class="section-title">What are we doing</h2>
-        <ul class="list">
-          <li>
+        <ul class="list about-flex">
+          <li class="about-img">
             <img
               src="./images/1.jpg"
               width="360"
@@ -91,7 +95,7 @@
               alt="Web Development"
             />
           </li>
-          <li>
+          <li class="about-img">
             <img
               src="./images/2.jpg"
               width="360"
@@ -99,8 +103,8 @@
               alt="UI Design"
             />
           </li>
-          <li>
-            <img
+          <li class="about-img">
+            <img 
               src="./images/3.jpg"
               width="360"
               height="300"
@@ -110,8 +114,9 @@
         </ul>
       </section>
       <section class="team">
+        <div class="container">
         <h2 class="section-title">Our Team</h2>
-        <ul class="list">
+        <ul class="list team-flex">
           <li class="team-card">
             <img
               src="./images/4.jpg"
@@ -153,10 +158,12 @@
             <p class="team-position">UI Designer</p>
           </li>
         </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="logo" href="./index.html"
+      <div class="container">
+      <a class="logo logo-bottom" href="./index.html"
         ><span class="web">Web</span
         ><span class="studio-bottom">Studio</span></a
       >
@@ -164,6 +171,8 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
+      </div>
     </footer>
   </body>
 </html>
