--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           >
           
           <ul class="list navigation">
-            <li><a class="nav-links" href="./index.html">Studio</a></li>
+            <li><a class="nav-links current" href="./index.html">Studio</a></li>
             <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-links" href="#">Contacts</a></li>
                 </ul>
@@ -48,12 +48,12 @@
         </header>
 
     <main>
-      <section class="hero section">
+      <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
-      <section class="strategy container">
-        <ul class="list future-flex">
+      <section class="strategy container section section-first-child">
+        <ul class="list feature-flex">
           <li class="feature">
             <h3 class="feature-title">Strategy</h3>
             <p class="feature-text">
@@ -84,7 +84,7 @@
           </li>
         </ul>
       </section>
-      <section class="about container">
+      <section class="about container section">
         <h2 class="section-title">What are we doing</h2>
         <ul class="list about-flex">
           <li class="about-img">
@@ -113,7 +113,7 @@
           </li>
         </ul>
       </section>
-      <section class="team">
+      <section class="team section">
         <div class="container">
         <h2 class="section-title">Our Team</h2>
         <ul class="list team-flex">
@@ -124,8 +124,10 @@
               height="260"
               alt="Our Product Designer"
             />
+            <div class="card-content">
             <h3 class="team-name">Mark Guerrero</h3>
             <p class="team-position">Product Designer</p>
+            </div>
           </li>
           <li class="team-card">
             <img
@@ -134,8 +136,11 @@
               height="260"
               alt="The person who are doing his best for you."
             />
+            <div class="card-content">
             <h3 class="team-name">Tom Ford</h3>
             <p class="tema-position">Frontend Developer</p>
+          </div>
+
           </li>
           <li class="team-card">
             <img
@@ -144,8 +149,11 @@
               height="260"
               alt="Makes you smile,when you see the ad."
             />
+
+            <div class="card-content">
             <h3 class="team-name">Camila Garcia</h3>
             <p class="team-position">Marketing</p>
+            </div>
           </li>
           <li class="team-card">
             <img
@@ -154,8 +162,10 @@
               height="260"
               alt="Trying to satisfy you with his designs."
             />
+            <div class="card-content">
             <h3 class="team-name">Daniel Wilson</h3>
             <p class="team-position">UI Designer</p>
+            </div>
           </li>
         </ul>
         </div>
