--- a/portfolio.html
+++ b/portfolio.html
@@ -18,20 +18,21 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <div class="top-line">
-          <a class="logo" href="./index.html"
+    <header class="header">
+      <div class="container">
+      <div class="menu-nav">
+      <nav class="menu-nav">
+        <a class="logo" href="./index.html"
             ><span class="web">Web</span>Studio</a
           >
-          <ul class="list">
+          
+          <ul class="list navigation">
             <li><a class="nav-links" href="./index.html">Studio</a></li>
-            <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="nav-links current" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-links" href="#">Contacts</a></li>
-          </ul>
-          </nav>
-          <address>
-            <ul class="list">
+                </ul>
+      </nav>
+           <ul class="list navigation contacts">
               <li>
                 <a class="nav-links-contacts" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
@@ -42,21 +43,23 @@
                   >+11(000)111-11-11</a
                 >
               </li>
-            </ul>
-          </address>
+              </ul>
         </div>
-      </header>
+        </header>
     <main>
-      <section>
+      <section class="portfolio-list">
+        <div class="container">
       <h1 class="visually-hidden">Our Strategy</h1>
-      <ul class="button-list">
+      <ul class="button-list btn-list-flex">
         <li><button type="button">All</button></li>
         <li><button type="button">Web Site</button></li>
         <li><button type="button">App</button></li>
         <li><button type="button">Design</button></li>
         <li><button type="button">Marketing</button></li>
       </ul>
-      <ul class="list">
+      </div>
+      <div class="container">
+      <ul class="list img-list-flex">
         <li>
           <img
             src="./images/8.jpg"
@@ -64,8 +67,10 @@
             height="300"
             alt="Bank App Interface Example"
           />
-          <h2 class="project-title">Banking App Interface Concept</h2>
-          <p class="project-text">App</p>
+            <div class="card-content-portfolio">
+            <h2 class="project-title">Banking App Interface Concept</h2>
+            <p class="project-text">App</p>
+            </div>
         </li>
         <li>
           <img
@@ -74,8 +79,10 @@
             height="300"
             alt="Example of Cashless Payment"
           />
+          <div class="card-content-portfolio">
           <h2 class="project-title">Cashless Payment</h2>
           <p class="project-text">Marketing</p>
+          </div>
         </li>
         <li>
           <img
@@ -84,8 +91,10 @@
             height="300"
             alt="Example of our Meditation App Technologies"
           />
-          <h2 class="project-title">Meditation App</h2>
-          <p class="project-text">App</p>
+          <div class="card-content-portfolio">
+            <h2 class="project-title">Meditation App</h2>
+            <p class="project-text">App</p>
+          </div>
         </li>
         <li>
           <img
@@ -94,8 +103,10 @@
             height="300"
             alt="Example of Taxi App Technologies"
           />
-          <h2 class="project-title">Taxi Service</h2>
-          <p class="project-text">Marketing</p>
+          <div class="card-content-portfolio">
+            <h2 class="project-title">Taxi Service</h2>
+            <p class="project-text">Marketing</p>
+          </div>
         </li>
         <li>
           <img
@@ -104,44 +115,56 @@
             height="300"
             alt="Screen Illustration Examples"
           />
-          <h2 class="project-title">Screen Illustrations</h2>
-          <p class="project-text">Design</p>
+          <div class="card-content-portfolio">
+            <h2 class="project-title">Screen Illustrations</h2>
+            <p class="project-text">Design</p>
+          </div>
         </li>
         <li>
           <img src="./images/13.jpg" width="360" height="300" alt="Education" />
-          <h2 class="project-title">Online Courses</h2>
-          <p class="project-text">Marketing</p>
+          <div class="card-content-portfolio">
+            <h2 class="project-title">Online Courses</h2>
+            <p class="project-text">Marketing</p>
+          </div>
         </li>
         <li>
-          <img src="./images/14.jpg" width="360" height="300" alt="Trands" />
-          <h2 class="project-title">Instagram Stories Concept</h2>
-          <p class="project-text">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/15.jpg"
-            width="360"
-            height="300"
-            alt="Healthy Life"
-          />
-          <h2 class="project-title">Organic Food</h2>
-          <p class="project-text">Web Site</p>
-        </li>
-        <li>
-          <img
-            src="./images/16.jpg"
-            width="360"
-            height="300"
-            alt="Development Example"
-          />
-          <h2 class="project-title">Fresh Coffee</h2>
-          <p class="project-text">Web Site</p>
-        </li>
-      </ul>
+              <img src="./images/14.jpg" width="360" height="300" alt="Trands" />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Instagram Stories Concept</h2>
+                <p class="project-text">Design</p>
+                </div>
+                  </li>
+            <li>
+              <img
+                src="./images/15.jpg"
+                width="360"
+                height="300"
+                alt="Healthy Life"
+              />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Organic Food</h2>
+                <p class="project-text">Web Site</p>
+                </div>
+              </li>
+            <li>
+              <img
+                src="./images/16.jpg"
+                width="360"
+                height="300"
+                alt="Development Example"
+              />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Fresh Coffee</h2>
+                <p class="project-text">Web Site</p>
+                </div>
+              </li>
+        </ul>
+      </div>
     </main>
     </section>
     <footer class="footer">
-      <a class="logo" href="./index.html"
+      <div class="container">
+      <a class="logo logo-bottom" href="./index.html"
         ><span class="web">Web</span
         ><span class="studio-bottom">Studio</span></a
       >
@@ -149,6 +172,8 @@
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
+      </div>
+      </div>
     </footer>
   </body>
 </html>
