--- a/portfolio.html
+++ b/portfolio.html
@@ -12,128 +12,143 @@
       rel="stylesheet"
     />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
-      <div class="menu-nav">
-      <nav class="menu-nav">
-        <a class="logo" href="./index.html"
-            ><span class="web">Web</span>Studio</a
-          >
-          
-          <ul class="list navigation">
-            <li><a class="nav-links" href="./index.html">Studio</a></li>
-            <li><a class="nav-links current" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="nav-links" href="#">Contacts</a></li>
-                </ul>
-      </nav>
-           <ul class="list navigation contacts">
+        <div class="menu-nav">
+          <nav class="menu-nav">
+            <a class="logo" href="./index.html"
+              ><span class="web">Web</span>Studio</a
+            >
+
+            <ul class="list navigation">
+              <li><a class="nav-links" href="./index.html">Studio</a></li>
               <li>
-                <a class="nav-links-contacts" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
+                <a class="nav-links current" href="./portfolio.html"
+                  >Portfolio</a
                 >
               </li>
-              <li>
-                <a class="nav-links-contacts" href="tel:+110001111111"
-                  >+11(000)111-11-11</a
-                >
-              </li>
-              </ul>
+              <li><a class="nav-links" href="#">Contacts</a></li>
+            </ul>
+          </nav>
+          <ul class="list navigation contacts">
+            <li>
+              <a class="nav-links-contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="nav-links-contacts" href="tel:+110001111111"
+                >+11(000)111-11-11</a
+              >
+            </li>
+          </ul>
         </div>
-        </header>
+      </div>
+    </header>
     <main>
       <section class="portfolio-list">
         <div class="container">
-      <h1 class="visually-hidden">Our Strategy</h1>
-      <ul class="button-list btn-list-flex">
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
-      </ul>
-      </div>
-      <div class="container">
-      <ul class="list img-list-flex">
-        <li>
-          <img
-            src="./images/8.jpg"
-            width="360"
-            height="300"
-            alt="Bank App Interface Example"
-          />
-            <div class="card-content-portfolio">
-            <h2 class="project-title">Banking App Interface Concept</h2>
-            <p class="project-text">App</p>
-            </div>
-        </li>
-        <li>
-          <img
-            src="./images/9.jpg"
-            width="360"
-            height="300"
-            alt="Example of Cashless Payment"
-          />
-          <div class="card-content-portfolio">
-          <h2 class="project-title">Cashless Payment</h2>
-          <p class="project-text">Marketing</p>
-          </div>
-        </li>
-        <li>
-          <img
-            src="./images/10.jpg"
-            width="360"
-            height="300"
-            alt="Example of our Meditation App Technologies"
-          />
-          <div class="card-content-portfolio">
-            <h2 class="project-title">Meditation App</h2>
-            <p class="project-text">App</p>
-          </div>
-        </li>
-        <li>
-          <img
-            src="./images/11.jpg"
-            width="360"
-            height="300"
-            alt="Example of Taxi App Technologies"
-          />
-          <div class="card-content-portfolio">
-            <h2 class="project-title">Taxi Service</h2>
-            <p class="project-text">Marketing</p>
-          </div>
-        </li>
-        <li>
-          <img
-            src="./images/12.jpg"
-            width="360"
-            height="300"
-            alt="Screen Illustration Examples"
-          />
-          <div class="card-content-portfolio">
-            <h2 class="project-title">Screen Illustrations</h2>
-            <p class="project-text">Design</p>
-          </div>
-        </li>
-        <li>
-          <img src="./images/13.jpg" width="360" height="300" alt="Education" />
-          <div class="card-content-portfolio">
-            <h2 class="project-title">Online Courses</h2>
-            <p class="project-text">Marketing</p>
-          </div>
-        </li>
-        <li>
-              <img src="./images/14.jpg" width="360" height="300" alt="Trands" />
+          <h1 class="visually-hidden">Our Strategy</h1>
+          <ul class="button-list btn-list-flex">
+            <li><button type="button">All</button></li>
+            <li><button type="button">Web Site</button></li>
+            <li><button type="button">App</button></li>
+            <li><button type="button">Design</button></li>
+            <li><button type="button">Marketing</button></li>
+          </ul>
+        </div>
+        <div class="container">
+          <ul class="list img-list-flex">
+            <li>
+              <img
+                src="./images/8.jpg"
+                width="360"
+                height="300"
+                alt="Bank App Interface Example"
+              />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Banking App Interface Concept</h2>
+                <p class="project-text">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/9.jpg"
+                width="360"
+                height="300"
+                alt="Example of Cashless Payment"
+              />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Cashless Payment</h2>
+                <p class="project-text">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/10.jpg"
+                width="360"
+                height="300"
+                alt="Example of our Meditation App Technologies"
+              />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Meditation App</h2>
+                <p class="project-text">App</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/11.jpg"
+                width="360"
+                height="300"
+                alt="Example of Taxi App Technologies"
+              />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Taxi Service</h2>
+                <p class="project-text">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/12.jpg"
+                width="360"
+                height="300"
+                alt="Screen Illustration Examples"
+              />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Screen Illustrations</h2>
+                <p class="project-text">Design</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/13.jpg"
+                width="360"
+                height="300"
+                alt="Education"
+              />
+              <div class="card-content-portfolio">
+                <h2 class="project-title">Online Courses</h2>
+                <p class="project-text">Marketing</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/14.jpg"
+                width="360"
+                height="300"
+                alt="Trands"
+              />
               <div class="card-content-portfolio">
                 <h2 class="project-title">Instagram Stories Concept</h2>
                 <p class="project-text">Design</p>
-                </div>
-                  </li>
+              </div>
+            </li>
             <li>
               <img
                 src="./images/15.jpg"
@@ -144,8 +159,8 @@
               <div class="card-content-portfolio">
                 <h2 class="project-title">Organic Food</h2>
                 <p class="project-text">Web Site</p>
-                </div>
-              </li>
+              </div>
+            </li>
             <li>
               <img
                 src="./images/16.jpg"
@@ -156,23 +171,22 @@
               <div class="card-content-portfolio">
                 <h2 class="project-title">Fresh Coffee</h2>
                 <p class="project-text">Web Site</p>
-                </div>
-              </li>
-        </ul>
-      </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-    </section>
     <footer class="footer">
       <div class="container">
-      <a class="logo logo-bottom" href="./index.html"
-        ><span class="web">Web</span
-        ><span class="studio-bottom">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-      </div>
+        <a class="logo logo-bottom" href="./index.html"
+          ><span class="web">Web</span
+          ><span class="studio-bottom">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
