--- a/index.html
+++ b/index.html
@@ -12,40 +12,45 @@
       rel="stylesheet"
     />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header class="header">
       <div class="container">
-      <div class="menu-nav">
-      <nav class="menu-nav">
-        <a class="logo" href="./index.html"
-            ><span class="web">Web</span>Studio</a
-          >
-          
-          <ul class="list navigation">
-            <li><a class="nav-links current" href="./index.html">Studio</a></li>
-            <li><a class="nav-links" href="./portfolio.html">Portfolio</a></li>
-            <li><a class="nav-links" href="#">Contacts</a></li>
-                </ul>
-      </nav>
-           <ul class="list navigation contacts">
+        <div class="menu-nav">
+          <nav class="menu-nav">
+            <a class="logo" href="./index.html"
+              ><span class="web">Web</span>Studio</a
+            >
+
+            <ul class="list navigation">
               <li>
-                <a class="nav-links-contacts" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
-                >
+                <a class="nav-links current" href="./index.html">Studio</a>
               </li>
               <li>
-                <a class="nav-links-contacts" href="tel:+110001111111"
-                  >+11(000)111-11-11</a
-                >
+                <a class="nav-links" href="./portfolio.html">Portfolio</a>
               </li>
-              </ul>
+              <li><a class="nav-links" href="#">Contacts</a></li>
+            </ul>
+          </nav>
+          <ul class="list navigation contacts">
+            <li>
+              <a class="nav-links-contacts" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="nav-links-contacts" href="tel:+110001111111"
+                >+11(000)111-11-11</a
+              >
+            </li>
+          </ul>
         </div>
-        </header>
+      </div>
+    </header>
 
     <main>
       <section class="hero">
@@ -104,7 +109,7 @@
             />
           </li>
           <li class="about-img">
-            <img 
+            <img
               src="./images/3.jpg"
               width="360"
               height="300"
@@ -115,73 +120,71 @@
       </section>
       <section class="team section">
         <div class="container">
-        <h2 class="section-title">Our Team</h2>
-        <ul class="list team-flex">
-          <li class="team-card">
-            <img
-              src="./images/4.jpg"
-              width="264"
-              height="260"
-              alt="Our Product Designer"
-            />
-            <div class="card-content">
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
-            </div>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/5.jpg"
-              width="264"
-              height="260"
-              alt="The person who are doing his best for you."
-            />
-            <div class="card-content">
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="tema-position">Frontend Developer</p>
-          </div>
+          <h2 class="section-title">Our Team</h2>
+          <ul class="list team-flex">
+            <li class="team-card">
+              <img
+                src="./images/4.jpg"
+                width="264"
+                height="260"
+                alt="Our Product Designer"
+              />
+              <div class="card-content">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/5.jpg"
+                width="264"
+                height="260"
+                alt="The person who are doing his best for you."
+              />
+              <div class="card-content">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="tema-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/6.jpg"
+                width="264"
+                height="260"
+                alt="Makes you smile,when you see the ad."
+              />
 
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/6.jpg"
-              width="264"
-              height="260"
-              alt="Makes you smile,when you see the ad."
-            />
-
-            <div class="card-content">
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-position">Marketing</p>
-            </div>
-          </li>
-          <li class="team-card">
-            <img
-              src="./images/7.jpg"
-              width="264"
-              height="260"
-              alt="Trying to satisfy you with his designs."
-            />
-            <div class="card-content">
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-position">UI Designer</p>
-            </div>
-          </li>
-        </ul>
+              <div class="card-content">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-position">Marketing</p>
+              </div>
+            </li>
+            <li class="team-card">
+              <img
+                src="./images/7.jpg"
+                width="264"
+                height="260"
+                alt="Trying to satisfy you with his designs."
+              />
+              <div class="card-content">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <footer class="footer">
       <div class="container">
-      <a class="logo logo-bottom" href="./index.html"
-        ><span class="web">Web</span
-        ><span class="studio-bottom">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-      </div>
+        <a class="logo logo-bottom" href="./index.html"
+          ><span class="web">Web</span
+          ><span class="studio-bottom">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
