--- a/portfolio.html
+++ b/portfolio.html
@@ -56,14 +56,16 @@
         <div class="container">
           <h1 class="visually-hidden">Our Strategy</h1>
           <ul class="button-list btn-list-flex">
-            <li><button type="button">All</button></li>
-            <li><button type="button">Web Site</button></li>
-            <li><button type="button">App</button></li>
-            <li><button type="button">Design</button></li>
-            <li><button type="button">Marketing</button></li>
+            <li><button class="portfolio-btn" type="button">All</button></li>
+            <li>
+              <button class="portfolio-btn" type="button">Web Site</button>
+            </li>
+            <li><button class="portfolio-btn" type="button">App</button></li>
+            <li><button class="portfolio-btn" type="button">Design</button></li>
+            <li>
+              <button class="portfolio-btn" type="button">Marketing</button>
+            </li>
           </ul>
-        </div>
-        <div class="container">
           <ul class="list img-list-flex">
             <li>
               <img
@@ -179,7 +181,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo logo-bottom" href="./index.html"
+        <a class="logo" href="./index.html"
           ><span class="web">Web</span
           ><span class="studio-bottom">Studio</span></a
         >
