fixed it all, done

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
             </li>
           </ul>
           <ul class="list img-list-flex">
-            <li>
+            <li class="card-portfolio">
               <img
                 src="./images/8.jpg"
                 width="360"
@@ -79,7 +79,7 @@
                 <p class="project-text">App</p>
               </div>
             </li>
-            <li>
+            <li class="card-portfolio">
               <img
                 src="./images/9.jpg"
                 width="360"
@@ -91,7 +91,7 @@
                 <p class="project-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="card-portfolio">
               <img
                 src="./images/10.jpg"
                 width="360"
@@ -114,8 +114,8 @@
                 <h2 class="project-title">Taxi Service</h2>
                 <p class="project-text">Marketing</p>
               </div>
-            </li>
-            <li>
+            </li class="card-portfolio">
+            <li class="card-portfolio">
               <img
                 src="./images/12.jpg"
                 width="360"
@@ -127,7 +127,7 @@
                 <p class="project-text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="card-portfolio">
               <img
                 src="./images/13.jpg"
                 width="360"
@@ -139,7 +139,7 @@
                 <p class="project-text">Marketing</p>
               </div>
             </li>
-            <li>
+            <li class="card-portfolio">
               <img
                 src="./images/14.jpg"
                 width="360"
@@ -151,7 +151,7 @@
                 <p class="project-text">Design</p>
               </div>
             </li>
-            <li>
+            <li class="card-portfolio">
               <img
                 src="./images/15.jpg"
                 width="360"
@@ -163,7 +163,7 @@
                 <p class="project-text">Web Site</p>
               </div>
             </li>
-            <li>
+            <li class="card-portfolio">
               <img
                 src="./images/16.jpg"
                 width="360"
@@ -192,4 +192,5 @@
       </div>
     </footer>
   </body>
+  Cashless
 </html>
