added links to img list on portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,112 +68,130 @@
           </ul>
           <ul class="list img-list-flex">
             <li class="card-portfolio">
-              <img
-                src="./images/8.jpg"
-                width="360"
-                height="300"
-                alt="Bank App Interface Example"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Banking App Interface Concept</h2>
-                <p class="project-text">App</p>
-              </div>
+              <a href="" class="card-portfolio-link">
+                <img
+                  src="./images/8.jpg"
+                  width="360"
+                  height="300"
+                  alt="Bank App Interface Example"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Banking App Interface Concept</h2>
+                  <p class="project-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="card-portfolio">
-              <img
-                src="./images/9.jpg"
-                width="360"
-                height="300"
-                alt="Example of Cashless Payment"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Cashless Payment</h2>
-                <p class="project-text">Marketing</p>
-              </div>
+              <a href="" class="card-portfolio-link">
+                <img
+                  src="./images/9.jpg"
+                  width="360"
+                  height="300"
+                  alt="Example of Cashless Payment"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Cashless Payment</h2>
+                  <p class="project-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-portfolio">
-              <img
-                src="./images/10.jpg"
-                width="360"
-                height="300"
-                alt="Example of our Meditation App Technologies"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Meditation App</h2>
-                <p class="project-text">App</p>
-              </div>
-            </li>
-            <li>
-              <img
-                src="./images/11.jpg"
-                width="360"
-                height="300"
-                alt="Example of Taxi App Technologies"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Taxi Service</h2>
-                <p class="project-text">Marketing</p>
-              </div>
-            </li class="card-portfolio">
-            <li class="card-portfolio">
-              <img
-                src="./images/12.jpg"
-                width="360"
-                height="300"
-                alt="Screen Illustration Examples"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Screen Illustrations</h2>
-                <p class="project-text">Design</p>
-              </div>
+              <a href="" class="card-portfolio-link">
+                <img
+                  src="./images/10.jpg"
+                  width="360"
+                  height="300"
+                  alt="Example of our Meditation App Technologies"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Meditation App</h2>
+                  <p class="project-text">App</p>
+                </div>
+              </a>
             </li>
             <li class="card-portfolio">
-              <img
-                src="./images/13.jpg"
-                width="360"
-                height="300"
-                alt="Education"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Online Courses</h2>
-                <p class="project-text">Marketing</p>
-              </div>
+              <a href="" class="card-portfolio-link">
+                <img
+                  src="./images/11.jpg"
+                  width="360"
+                  height="300"
+                  alt="Example of Taxi App Technologies"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Taxi Service</h2>
+                  <p class="project-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-portfolio">
-              <img
-                src="./images/14.jpg"
-                width="360"
-                height="300"
-                alt="Trands"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Instagram Stories Concept</h2>
-                <p class="project-text">Design</p>
-              </div>
+              <a href="" class="card-portfolio-link">
+                <img
+                  src="./images/12.jpg"
+                  width="360"
+                  height="300"
+                  alt="Screen Illustration Examples"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Screen Illustrations</h2>
+                  <p class="project-text">Design</p>
+                </div>
+              </a>
             </li>
             <li class="card-portfolio">
-              <img
-                src="./images/15.jpg"
-                width="360"
-                height="300"
-                alt="Healthy Life"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Organic Food</h2>
-                <p class="project-text">Web Site</p>
-              </div>
+              <a href="" class="card-portfolio-link">
+                <img
+                  src="./images/13.jpg"
+                  width="360"
+                  height="300"
+                  alt="Education"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Online Courses</h2>
+                  <p class="project-text">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="card-portfolio">
-              <img
-                src="./images/16.jpg"
-                width="360"
-                height="300"
-                alt="Development Example"
-              />
-              <div class="card-content-portfolio">
-                <h2 class="project-title">Fresh Coffee</h2>
-                <p class="project-text">Web Site</p>
-              </div>
+              <a href="" class="card-portfolio-link">
+                <img
+                  src="./images/14.jpg"
+                  width="360"
+                  height="300"
+                  alt="Trands"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Instagram Stories Concept</h2>
+                  <p class="project-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-portfolio">
+              <a href="" class="card-portfolio-link">
+                <img
+                  src="./images/15.jpg"
+                  width="360"
+                  height="300"
+                  alt="Healthy Life"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Organic Food</h2>
+                  <p class="project-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="card-portfolio">
+              <a href="#" class="card-portfolio-link">
+                <img
+                  src="./images/16.jpg"
+                  width="360"
+                  height="300"
+                  alt="Development Example"
+                />
+                <div class="card-content-portfolio">
+                  <h2 class="project-title">Fresh Coffee</h2>
+                  <p class="project-text">Web Site</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
