--- a/index.html
+++ b/index.html
@@ -93,34 +93,36 @@
           </ul>
         </div>
       </section>
-      <section class="about container section">
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="list about-flex">
-          <li class="about-img">
-            <img
-              src="./images/1.jpg"
-              width="360"
-              height="300"
-              alt="Web Development"
-            />
-          </li>
-          <li class="about-img">
-            <img
-              src="./images/2.jpg"
-              width="360"
-              height="300"
-              alt="UI Design"
-            />
-          </li>
-          <li class="about-img">
-            <img
-              src="./images/3.jpg"
-              width="360"
-              height="300"
-              alt="Mobile Development"
-            />
-          </li>
-        </ul>
+      <section class="about section">
+        <div class="container">
+          <h2 class="section-title">What are we doing</h2>
+          <ul class="list about-flex">
+            <li class="about-img">
+              <img
+                src="./images/1.jpg"
+                width="360"
+                height="300"
+                alt="Web Development"
+              />
+            </li>
+            <li class="about-img">
+              <img
+                src="./images/2.jpg"
+                width="360"
+                height="300"
+                alt="UI Design"
+              />
+            </li>
+            <li class="about-img">
+              <img
+                src="./images/3.jpg"
+                width="360"
+                height="300"
+                alt="Mobile Development"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="team section">
         <div class="container">
